Align & Display issue fixed for mobile headers

--- a/sass/site/navigation/_primary-menu.scss
+++ b/sass/site/navigation/_primary-menu.scss
@@ -158,8 +158,8 @@
 		padding-left: 0;
 		
 		ul {
-			.menu-item {
-				.menu-link {
+			li {
+				a {
 					padding: 0 20px;
 					display: inline-block;
 					width: 100%;
